--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -13,7 +13,7 @@ html {
 
 body {
 	font-size: 2rem;
-	background-color: $body-color;
+	background: $body-color;
 }
 
 .subPageBody {
@@ -48,7 +48,7 @@ a:active {
 }
 
 // Shadows
-$drop-shadow: 	drop-shadow(0px 5px 10px rgba(#000, 0.1)) 
+$drop-shadow: 	drop-shadow(0px 5px 10px rgba(#000, 0.1))
 				drop-shadow(0px 1px 1px rgba(#000, 0.2)
 				);
 
