--- a/main.scss
+++ b/main.scss
@@ -5,7 +5,7 @@
 $body-color: {{ site.body_background_color }};
 
 $header-image: "{{ site.cover_image }}";
-$device-color: "assets/{{ site.device_color }}.png";
+$device-color: "assets/{{ site.device_color }}-{{ site.device_type }}.png";
 
 $accent-color: {{ site.link_color }};
 
@@ -30,7 +30,7 @@ $feature-icons-background-color: {{ site.feature_icons_background_color }};
 $social-icons-foreground-color: {{ site.social_icons_foreground_color }};
 $social-icons-background-color: {{ site.social_icons_background_color }};
 
-@import 
+@import
     "base",
     "layout",
     "github-markdown"
