--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,9 @@
 	<link rel="shortcut icon" href="{{ site.app_icon | relative_url }}">
 
 	<!-- Smart App Banner -->
-	{% if site.enable_smart_app_banner %}
-		<meta name="apple-itunes-app" content="app-id={{ site.ios_app_id }}">
+	{% assign header_ios_app_id = page.ios_app_id | default: site.ios_app_id %}
+	{% if site.enable_smart_app_banner and header_ios_app_id %}
+		<meta name="apple-itunes-app" content="app-id={{ header_ios_app_id }}">
 	{% endif %}
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
