--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -81,6 +81,83 @@
 	grid-column: 3/11;
 }
 
+.supportForm {
+	max-width: 700px;
+	margin-top: 30px;
+}
+
+.supportField {
+	margin-bottom: 22px;
+}
+
+.supportLabel {
+	display: block;
+	font-size: 1.6rem;
+	font-weight: 600;
+	margin-bottom: 10px;
+}
+
+.supportInput,
+.supportTextarea {
+	width: 100%;
+	font: inherit;
+	font-size: 1.7rem;
+	line-height: 1.5;
+	padding: 12px 14px;
+	border: 1px solid rgba(#000, 0.2);
+	border-radius: 10px;
+	background-color: #fff;
+	color: #000;
+}
+
+.supportTextarea {
+	min-height: 180px;
+	resize: vertical;
+}
+
+.supportInput:focus,
+.supportTextarea:focus {
+	outline: none;
+	border-color: rgba($accent-color, 0.9);
+	box-shadow: 0 0 0 3px rgba($accent-color, 0.25);
+}
+
+.supportButton {
+	font: inherit;
+	font-size: 1.7rem;
+	font-weight: 600;
+	background-color: $accent-color;
+	color: #fff;
+	border: 0;
+	border-radius: 10px;
+	padding: 12px 24px;
+	cursor: pointer;
+}
+
+.supportButton:hover,
+.supportButton:focus {
+	opacity: 0.92;
+}
+
+.supportHelp {
+	margin-top: 16px;
+	font-size: 1.6rem;
+	line-height: 1.5;
+	color: rgba(#000, 0.7);
+}
+
+.supportStatus {
+	margin-top: 12px;
+	font-size: 1.5rem;
+	line-height: 1.4;
+	min-height: 21px;
+	color: rgba(#000, 0.7);
+}
+
+.supportError {
+	color: #b00020;
+}
+
 @media only screen and (max-width: 768px) {
 
 	.page {
